<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Larble</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="larble">LARBLE</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="settings">SETTINGS</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="enter_the_code_of_a_valid_game">Enter the code of a valid game</string>
    <string name="new_game">Create a game</string>
    <string name="play">Join a game</string>
    <string name="share_this_code_with_your_friend">Share this code with your friend</string>
    <string name="check">check</string>
    <string name="log_out">Log out</string>
    <string name="account">account</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_username">change_username</string>
    <string name="change_username1">change username</string>
    <string name="picture">picture</string>
    <string name="_1_2_players" tools:ignore="TypographyFractions">Players found 1/2</string>
    <string name="searching_the_game">Searching the game</string>
    <string name="plus">+</string>
    <string name="logo">logo</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="icon">icon</string>
    <string name="score">Score</string>
    <string name="wins">Wins</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="retry">retry</string>
    <string name="networkPopup">The device seems not to be connected to the internet.\n Connect the device to a network and try again</string>
    <string name="serverPopup"> Connection with the server failed.\n Wait a few seconds and try again</string>
    <string name="hole">hole</string>
    <string name="Continue">Continue</string>
    <string name="google_login">Sign in with Google</string>
</resources>