<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="463dp"
        android:layout_height="160dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/multiplayer"
        android:layout_width="177dp"
        android:layout_height="72dp"
        android:text="@string/multiplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_player"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/single_player"
        android:layout_width="177dp"
        android:layout_height="72dp"
        android:text="@string/single_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/name"
        android:layout_width="243dp"
        android:layout_height="70dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.06" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="81dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/primary_color"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scoreboard"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@android:drawable/ic_menu_manage"
        app:tint="#FFFFFF" />

    <ImageButton
        android:id="@+id/scoreboard"
        android:layout_width="81dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/primary_color"
        android:contentDescription="@string/scoreboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayer"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="?attr/actionModePasteDrawable"
        app:tint="#FFFFFF" />
</androidx.constraintlayout.widget.ConstraintLayout>