<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="463dp"
        android:layout_height="160dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/sign_up1"
        android:layout_width="141dp"
        android:layout_height="58dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.287" />

    <ImageView
        android:id="@+id/checkUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332"
        app:srcCompat="?android:attr/textCheckMark"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/checkEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/checkUsername"
        app:layout_constraintVertical_bias="0.098"
        app:srcCompat="?android:attr/textCheckMark"
        app:tint="@color/black"/>

    <ImageView
        android:id="@+id/checkConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword3"
        app:layout_constraintTop_toBottomOf="@+id/checkPassword"
        app:layout_constraintVertical_bias="0.137"
        app:srcCompat="?android:attr/textCheckMark"
        app:tint="@color/black"/>

    <ImageView
        android:id="@+id/checkPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/checkEmail"
        app:layout_constraintVertical_bias="0.129"
        app:srcCompat="?android:attr/textCheckMark"
        app:tint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>